--- a/styles/sass/layout/_lecture_schedule.scss
+++ b/styles/sass/layout/_lecture_schedule.scss
@@ -141,6 +141,10 @@
 
 .column.hidden {
   flex: 0;
+
+  .column-content-wrapper {
+    margin: 0;
+  }
 }
 
 .column-header {
